--- a/web_app/templates/bootstrap_layout.html
+++ b/web_app/templates/bootstrap_layout.html
@@ -29,7 +29,8 @@
     <!-- see: https://getbootstrap.com/docs/4.0/components/navbar/ -->
     {% set nav_links = [
       ('/about', 'about', 'About'),
-      ('/users/new', 'new_user', 'Sign Up')
+      ('/users/new', 'new_user', 'Sign Up'),
+      ('/weather/form', 'weather_form', 'Get Forecast')
     ] -%}
     {% set active_page = active_page|default('index') -%}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
